[gd_scene load_steps=9 format=2]

[ext_resource path="res://Fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Menu Buttons/blue_button12.png" type="Texture" id=2]
[ext_resource path="res://Assets/Menu Buttons/blue_button11.png" type="Texture" id=3]
[ext_resource path="res://Assets/Main Menu/Main Menu Complete Merged.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Game Menu/Main Menu.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[node name="Main Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 15
size_flags_vertical = 15
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_bottom = 49.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Game Name" type="Label" parent="HBoxContainer"]
margin_left = 634.0
margin_right = 1285.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 1 )
text = "Here is the name of the Game "
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hovered Description" type="Label" parent="."]
anchor_left = 0.565
anchor_top = 0.456
anchor_right = 0.865
anchor_bottom = 0.746
margin_left = 15.7051
margin_top = 14.5436
margin_right = -17.295
margin_bottom = -38.6564
custom_fonts/font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.576306
anchor_top = 0.795069
anchor_right = 0.862765
anchor_bottom = 0.840439
margin_right = -1.0
grow_horizontal = 0
grow_vertical = 0
custom_constants/separation = 76
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TestRoomButton" type="TextureButton" parent="VBoxContainer"]
margin_right = 49.0
margin_bottom = 49.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TestRoomLabel" type="Label" parent="VBoxContainer/TestRoomButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
text = "Test
Room"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGameButton" type="TextureButton" parent="VBoxContainer"]
margin_left = 125.0
margin_right = 174.0
margin_bottom = 49.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewGameLabel" type="Label" parent="VBoxContainer/NewGameButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
text = "New
Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadGameButton" type="TextureButton" parent="VBoxContainer"]
margin_left = 250.0
margin_right = 299.0
margin_bottom = 49.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LoadGameLabel" type="Label" parent="VBoxContainer/LoadGameButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 3.8147e-06
margin_bottom = 3.8147e-06
custom_fonts/font = SubResource( 3 )
text = "Load
Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsButton" type="TextureButton" parent="VBoxContainer"]
margin_left = 375.0
margin_right = 424.0
margin_bottom = 49.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionsLabel" type="Label" parent="VBoxContainer/OptionsButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
text = "Optio
ns"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitGameButton" type="TextureButton" parent="VBoxContainer"]
margin_left = 500.0
margin_right = 549.0
margin_bottom = 49.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitGameLabel" type="Label" parent="VBoxContainer/QuitGameButton"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
text = "Quit
Game"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
anchor_left = 0.210571
anchor_top = 0.519546
anchor_right = 0.231405
anchor_bottom = 0.556583
margin_bottom = -6.10352e-05
grow_horizontal = 0
grow_vertical = 0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="ViewportContainer" type="ViewportContainer" parent="."]
anchor_left = 0.210571
anchor_top = 0.519546
anchor_right = 0.231405
anchor_bottom = 0.556583
margin_bottom = -6.10352e-05
stretch = true
stretch_shrink = 10
__meta__ = {
"_edit_use_anchors_": true
}
[connection signal="mouse_entered" from="VBoxContainer/TestRoomButton" to="." method="_on_TestRoomButton_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/TestRoomButton" to="." method="_on_TestRoomButton_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/TestRoomButton" to="." method="_on_TestRoomButton_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/NewGameButton" to="." method="_on_NewGameButton_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/NewGameButton" to="." method="_on_NewGameButton_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/NewGameButton" to="." method="_on_NewGameButton_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/LoadGameButton" to="." method="_on_LoadGameButton_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/LoadGameButton" to="." method="_on_LoadGameButton_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/LoadGameButton" to="." method="_on_LoadGameButton_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/QuitGameButton" to="." method="_on_QuitGameButton_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/QuitGameButton" to="." method="_on_QuitGameButton_mouse_exited"]
[connection signal="pressed" from="VBoxContainer/QuitGameButton" to="." method="_on_QuitGameButton_pressed"]
